--- a/assets/style.css
+++ b/assets/style.css
@@ -1,4 +1,4 @@
-@import url('./bootstrap/bootstrap.css');
+@import url('./bootstrap/bootstrap.min.css');
 body {
 	max-width: 1920px;
 	margin: auto;
@@ -85,7 +85,7 @@ body {
 	font-weight: 800;
 	font-style: italic;
 	width: 60%;
-	font-size: 24px;
+	font-size: 16px;
 }
 .about-me__description {
 	width: 80%;
